--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 .calc-section-container {
     width: min(500px, 100%);
     height: min(800px, 100%);
-    /* border-radius: 2rem; */
+    border-radius: 2rem;
     background: var(--calc-color);
     display: flex;
     flex-direction: column;
